third_party/blink/renderer/core/svg/svg_element.cc
@@ -314,16 +314,23 @@ static inline bool TransformUsesBoxSize(const ComputedStyle& style) {
   return false;
 }
 
-static FloatRect ComputeTransformReferenceBox(const SVGElement& element) {
-  const LayoutObject& layout_object = *element.GetLayoutObject();
+FloatRect ComputeSVGTransformReferenceBox(const LayoutObject& layout_object) {
   const ComputedStyle& style = layout_object.StyleRef();
-  if (style.TransformBox() == ETransformBox::kFillBox)
-    return layout_object.ObjectBoundingBox();
-  DCHECK_EQ(style.TransformBox(), ETransformBox::kViewBox);
-  SVGLengthContext length_context(&element);
-  FloatSize viewport_size;
-  length_context.DetermineViewport(viewport_size);
-  return FloatRect(FloatPoint(), viewport_size);
+  FloatRect reference_box;
+  if (style.TransformBox() == ETransformBox::kFillBox) {
+    reference_box = layout_object.ObjectBoundingBox();
+  } else {
+    DCHECK_EQ(style.TransformBox(), ETransformBox::kViewBox);
+    SVGLengthContext length_context(
+        ToSVGElementOrNull(layout_object.GetNode()));
+    FloatSize viewport_size;
+    length_context.DetermineViewport(viewport_size);
+    reference_box.SetSize(viewport_size);
+  }
+  const float zoom = style.EffectiveZoom();
+  if (zoom != 1)
+    reference_box.Scale(zoom);
+  return reference_box;
 }
 
 AffineTransform SVGElement::CalculateTransform(
@@ -335,7 +342,6 @@ AffineTransform SVGElement::CalculateTransform(
   // set).
   AffineTransform matrix;
   if (style && style->HasTransform()) {
-    FloatRect reference_box = ComputeTransformReferenceBox(*this);
     if (TransformUsesBoxSize(*style))
       UseCounter::Count(GetDocument(), WebFeature::kTransformUsesBoxSizeOnSVG);
 
@@ -343,21 +349,21 @@ AffineTransform SVGElement::CalculateTransform(
     // SVG (which applies the zoom factor globally, at the root level) we
     //
     //   * pre-scale the reference box (to bring it into the same space as the
-    //     other CSS values)
+    //     other CSS values) (Handled by ComputeSVGTransformReferenceBox)
     //   * invert the zoom factor (to effectively compute the CSS transform
     //     under a 1.0 zoom)
     //
     // Note: objectBoundingBox is an emptyRect for elements like pattern or
     // clipPath. See
     // https://svgwg.org/svg2-draft/coords.html#ObjectBoundingBoxUnits
-    float zoom = style->EffectiveZoom();
     TransformationMatrix transform;
-    if (zoom != 1)
-      reference_box.Scale(zoom);
+    FloatRect reference_box =
+        ComputeSVGTransformReferenceBox(*GetLayoutObject());
     style->ApplyTransform(
         transform, reference_box, ComputedStyle::kIncludeTransformOrigin,
         ComputedStyle::kIncludeMotionPath,
         ComputedStyle::kIncludeIndependentTransformProperties);
+    const float zoom = style->EffectiveZoom();
     if (zoom != 1)
       transform.Zoom(1 / zoom);
     // Flatten any 3D transform.
